# vfit_project

./: .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  plot_ltspice_bode.py  pyproject.toml  requirements.txt
docs/: theory.md
examples/: 01_simple_rlc.py  02_sdomain.py  03_noisy_data.py  04_from_measurement.py  05_two_rlc_network.py  06_passivity.py  07_multi_peak.py  data_filter_S21.csv  data_inductor_Z.csv  data_inductor_Z.csv_behavioral.cir  data_inductor_Z.csv_foster.cir  data_multi_peak_Z.csv  data_two_rlc_Z.csv  filter_behavioral.cir  filter_foster.cir  inductor_behavioral.cir  inductor_foster.cir  multi_peak_behavioral.cir  multi_peak_foster.cir  multi_peak_from_csv_behavioral.cir  multi_peak_from_csv_foster.cir  noisy1_behavioral.cir  noisy1_foster.cir  noisy2_behavioral.cir  noisy2_foster.cir  noisy3_behavioral.cir  passivity1_behavioral.cir  passivity1_foster.cir  passivity2_behavioral.cir  passivity2_foster.cir  passivity3_behavioral.cir  passivity3_foster.cir  sdomain1_behavioral.cir  sdomain1_foster.cir  sdomain2_behavioral.cir  sdomain2_foster.cir  sdomain3_behavioral.cir  simple_rlc_behavioral.cir  simple_rlc_foster.cir  tb_behavioral.cir  (+31 more)
src/vfit/: __init__.py
src/vfit/core/: pole_zero.py  rational_function.py  vector_fitting.py
src/vfit/export/: spice_export.py
src/vfit/rlc/: rlc_synthesis.py
src/vfit/solvers/: __init__.py  auto_order.py  passivity.py
src/vfit/utils/: __init__.py  data_loader.py
src/vfit/visualization/: __init__.py
tests/: test_vector_fitting.py
