[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vfit"
version = "0.1.0"
description = "Vector Fitting for RLC and S-domain rational approximation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-rf>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "ipykernel",
    "notebook",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["src/vfit"]
